src/app/globals.css
@import "./fonts.css";

:root {
    --base-100: #e3e3db;
    --base-200: #ccccc4;
    --base-300: #8c7e77;
    --base-400: #1a1614;
    --base-500: #ff6e14;
    --base-600: #e8e800;

    --accent-1: #3d2fa9;
    --accent-2: #a92f78;
    --accent-3: #ff3d33;
    --accent-4: #785f47;
    --accent-5: #2f72a9;

    --variant-1: var(--base-200);
    --variant-2: var(--base-400);
    --variant-3: var(--base-500);
    --variant-4: var(--base-600);
    --disabled-folder-bg: #d4d7d0;
    --disabled-folder-fg: #989b95;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-tap-highlight-color: transparent;
}

::-webkit-scrollbar {
    display: none;
}

html {
    scrollbar-width: none;
}



body {
    background-color: #000;
    color: var(--base-400);
    overflow-x: hidden;
}

/* Custom cursor */
#dot,
#ball {
    position: fixed;
    top: 0;
    left: 0;
    border-radius: 50%;
    pointer-events: none;
    mix-blend-mode: difference;
    z-index: 1000000001;
}

#dot {
    width: 15px;
    height: 15px;
    background: var(--base-500);
}

#ball {
    width: 30px;
    height: 30px;
    border: 2px solid var(--base-500);
    background: transparent;
}

@media (max-width: 575.98px) {

    #dot,
    #ball {
        display: none;
    }
}

h1,
h2,
h3,
h4 {
    text-transform: uppercase;
    font-family: "Big Shoulders Display";
    font-weight: 900;
    line-height: 0.9;
    letter-spacing: -0.125rem;
}

h1 {
    font-size: 8rem;
}

h2 {
    font-size: 6rem;
}

h3 {
    font-size: 5rem;
    letter-spacing: -0.15rem;
}

h4 {
    font-size: 4rem;
    letter-spacing: -0.1rem;
}

p {
    font-family: "PP Neue Montreal";
    font-size: 1.25rem;
    font-weight: 400;
    line-height: 1.2;
}

p.lg {
    font-size: 1.75rem;
    font-weight: 400;
    line-height: 1.15;
}

p.sm,
a.sm {
    text-decoration: none;
    text-transform: uppercase;
    font-family: "Geist Mono";
    font-size: 0.85rem;
    font-weight: 500;
    line-height: 1.15;
    color: var(--base-300);
    letter-spacing: 0.1rem;
}

p.cap {
    text-transform: uppercase;
    font-family: "PP Pangram Sans";
    font-size: 0.9rem;
    font-weight: 900;
    -webkit-font-smoothing: antialiased;
}

.container {
    width: 100%;
    height: 100%;
    padding: 2rem;
    max-width: 2000px;
    margin: 0 auto;
}

.page-transition-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1000000000;
    pointer-events: none;
}

.page-transition-overlay svg {
    width: 100%;
    height: 100%;
}

.page-transition-overlay .overlay__path {
    fill: var(--base-500);
    stroke: none;
}

@media (max-width: 1000px) {
    h1 {
        font-size: 3rem;
    }

    h2 {
        font-size: 2rem;
    }

    h3 {
        font-size: 1.5rem;
    }

    h4 {
        font-size: 1rem;
    }

    h1,
    h2,
    h3,
    h4 {
        letter-spacing: 0 !important;
    }

    p.lg {
        font-size: 1.125rem;
    }

    p.sm {
        font-size: 0.8rem;
        letter-spacing: 0.05rem;
    }

    .container {
        padding: 1.25rem;
    }
}

@media (min-width: 2400px) {
    h1 {
        font-size: 10rem;
    }
}

